--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/NLDev/NodeScrambler2001#readme",
   "dependencies": {
+    "minimist": "^1.2.0",
     "prompts": "^0.1.8",
     "terminal-kit": "^1.15.5"
   }
